# bevy-planet

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md
.claude/agents/: tutor.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: camera.rs  lib.rs  main.rs  skybox.rs  star_system.rs  utils.rs
app/src/camera/: input.rs  picking.rs  sync.rs
docs/: functional.md  logbook.md  technical.md
