[package]
name = "bevy-planet"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"

# --- Compilation speedup ---
# Our code: few optimizations (fast rebuilds).
# Dependencies (including Bevy): max optimizations (smooth runtime).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
