[package]
name = "bevy-planet"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19", features = ["debug", "tonemapping_luts"] }
bevy-inspector-egui = "0.37.0"
noise = "0.9.0"

# --- Compilation speedup ---
# Our code: few optimizations (fast rebuilds).
# Dependencies (including Bevy): max optimizations (smooth runtime).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
